--- a/company/templates/company/companybase2.html
+++ b/company/templates/company/companybase2.html
@@ -45,7 +45,7 @@
             <ul class="sub-menu">
               <li><a class="link_name" href="#">Company Info</a></li>
               <li><a href="#">Announcements</a></li>
-              <li><a href="#">Complexs</a></li>
+              <li><a href="{% url 'complexs' companyid=employment.company.id %}">Complexs</a></li>
               <li><a href="#">Leagues</a></li>
               <li><a href="#">Game Pay</a></li>
               <li><a href="#">Contact</a></li>
