--- a/company/templates/company/leagues.html
+++ b/company/templates/company/leagues.html
@@ -1,9 +1,84 @@
-{% extends "templates" %}
-
-{% block title %}
-
-{% endblock title %}
-
+{% extends 'company/companybase2.html' %}
+{% load static %}
+{% block title %}Complexes{% endblock title %}
+{% block style %}
+<link rel="stylesheet" href="{% static 'company/leagues.css' %}"> 
+{% endblock style %}
 {% block main %}
+<div style="padding: 20px;">
+    <h1>Leagues</h1>
+        <div>
+            <div class="sport-dropdown-container">
+                <select id="sport-dropdown">
+                        <option disabled selected>Pick your sport</option>
+                    {% for sport in sports %}
+                        <option value="{{sport.id}}">{{sport.name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="search-container">
+                <span>
+                    <input type="text" id="search-bar" placeholder="Search Leagues...">
+                </span>
+            </div>                 
+            <div class="data-table-container"> 
+                <table class="data-table">
+                    <thead>
+                         <tr>
+                            <th class='id'>League ID</th>
+                            <th class='name'>Name</th>
+                        </tr>
+                    </thead>
+                    <tbody id='tbody'>
 
-{% endblock main  %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+</div>
+{% endblock main %}
+{% block scripts %}
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+    const searchInput = document.getElementById('search-bar');
+    const sportDropdown = document.getElementById('sport-dropdown');
+    const tableBody = document.querySelector('#tbody');
+
+    let data = {{leagues | safe}};
+
+    // Function to populate the table with data
+    function populateTable(data) {
+        tableBody.innerHTML = ''; // Clear existing rows
+        //data = data.filter(data => {})
+        data.forEach(league => {
+            const row = document.createElement('tr');
+            row.innerHTML = `
+            <td class='id'><a href="/company/{{employment.company.id}}/info/leagues/${league.id}">${league.id}</td>
+            <td class='name'>${league.name}</td>`;
+            tableBody.appendChild(row);
+        });
+    }
+
+    // Initial table population
+    // populateTable(data);
+
+    // Event listener for the search input
+    function checkvals() {
+        const searchTerm = searchInput.value.toLowerCase();
+        const sportCriteria = parseInt(sportDropdown.value);
+        // Filter the data based on the search term
+        const filteredData = data.filter(item => {
+            if (sportCriteria === item.sport_id){
+                return item.name.toString().includes(searchTerm);
+            }
+        });
+        // Update the table with filtered data
+        populateTable(filteredData);
+    }
+    populateTable(data);
+    searchInput.addEventListener('input', checkvals);
+});
+</script>
+{% endblock scripts %}
